more small changes

--- a/SteamInsights/caroline_eda.ipynb
+++ b/SteamInsights/caroline_eda.ipynb
@@ -1407,7 +1407,11 @@
    "id": "2ab128f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def square(n):\n",
+    "    '''Takes in a number n, returns the square of n'''\n",
+    "    return n**2"
+   ]
   }
  ],
  "metadata": {
