adds testing file and minor changes to functions

--- a/SteamInsights/c_analysis.ipynb
+++ b/SteamInsights/c_analysis.ipynb
@@ -2,44 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 58,
    "id": "23231672",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name                           object\n",
-       "estimated_owners               object\n",
-       "price                         float64\n",
-       "windows                          bool\n",
-       "mac                              bool\n",
-       "linux                            bool\n",
-       "achievements                    int64\n",
-       "developers                     object\n",
-       "publishers                     object\n",
-       "categories                     object\n",
-       "genres                         object\n",
-       "tags                           object\n",
-       "single_player                    bool\n",
-       "release_year                    int64\n",
-       "players                        object\n",
-       "popular_tags                   object\n",
-       "recent_sentiment               object\n",
-       "recent_review_number          float64\n",
-       "recent_positive_percentage    float64\n",
-       "all_sentiment                  object\n",
-       "all_review_number             float64\n",
-       "all_positive_percentage       float64\n",
-       "global_sales                  float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -57,7 +23,9 @@
     "\n",
     "\n",
     "all_games = pd.read_csv('data/all_games_cleaned.csv')\n",
-    "all_games.dtypes"
+    "all_games.dtypes\n",
+    "\n",
+    "tags = pd.read_csv('data/tags.csv')"
    ]
   },
   {
@@ -70,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 72,
    "id": "68031696",
    "metadata": {},
    "outputs": [
@@ -96,29 +64,36 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>windows</th>\n",
-       "      <th>mac</th>\n",
-       "      <th>linux</th>\n",
+       "      <th>publishers</th>\n",
+       "      <th>developers</th>\n",
+       "      <th>all_sentiment</th>\n",
+       "      <th>global_sales</th>\n",
+       "      <th>release_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
+       "      <th>0</th>\n",
        "      <td>Farming Simulator 17</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>GIANTS Software</td>\n",
+       "      <td>GIANTS Software</td>\n",
+       "      <td>Very Positive</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    name  windows   mac  linux\n",
-       "39  Farming Simulator 17     True  True  False"
+       "                   name       publishers       developers  all_sentiment  \\\n",
+       "0  Farming Simulator 17  GIANTS Software  GIANTS Software  Very Positive   \n",
+       "\n",
+       "   global_sales  release_year  \n",
+       "0          1.62          2016  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,35 +102,36 @@
     "# Some Summary Functions\n",
     "def game_summary(game_name):\n",
     "    summary = all_games[all_games['name'] == game_name]\n",
+    "    summary.reset_index(inplace=True)\n",
     "    return summary.loc[:, ['name', 'publishers', 'developers', 'all_sentiment', 'global_sales', 'release_year']]\n",
-    "# game_summary('Farming Simulator 17')\n",
+    "game_summary('Farming Simulator 17')\n",
     "\n",
     "\n",
-    "def get_sentiment(game_name):\n",
-    "    sentiment = all_games[all_games['name'] == game_name]\n",
-    "    return sentiment.loc[:, ['name', 'recent_sentiment', 'recent_review_number', 'recent_positive_percentage', 'all_sentiment', 'all_review_number', 'all_positive_percentage' ]]\n",
-    "# get_sentiment('Farming Simulator 17')\n",
+    "# def get_sentiment(game_name):\n",
+    "#     sentiment = all_games[all_games['name'] == game_name]\n",
+    "#     return sentiment.loc[:, ['name', 'recent_sentiment', 'recent_review_number', 'recent_positive_percentage', 'all_sentiment', 'all_review_number', 'all_positive_percentage' ]]\n",
+    "# # get_sentiment('Farming Simulator 17')\n",
     "\n",
-    "def get_sales_info(game_name):\n",
-    "    sale = all_games[all_games['name'] == game_name]\n",
-    "    return sale.loc[:, ['name', 'price', 'estimated_owners', 'global_sales', 'release_year']]\n",
-    "# get_sales_info('Farming Simulator 17')\n",
+    "# def get_sales_info(game_name):\n",
+    "#     sale = all_games[all_games['name'] == game_name]\n",
+    "#     return sale.loc[:, ['name', 'price', 'estimated_owners', 'global_sales', 'release_year']]\n",
+    "# # get_sales_info('Farming Simulator 17')\n",
     "\n",
-    "def get_genre(game_name):\n",
-    "    genres = all_games[all_games['name'] == game_name]\n",
-    "    return genres.loc[:, ['name', 'achievements', 'single_player', 'categories', 'genres', 'tags', 'popular_tags']]\n",
-    "# get_genre('Farming Simulator 17')\n",
+    "# def get_genre(game_name):\n",
+    "#     genres = all_games[all_games['name'] == game_name]\n",
+    "#     return genres.loc[:, ['name', 'achievements', 'single_player', 'genres']]\n",
+    "# # get_genre('Farming Simulator 17')\n",
     "\n",
     "\n",
-    "def get_tags(game_name):\n",
-    "    game_tags = tags[tags['name'] == game_name]\n",
-    "    return game_tags.columns[game_tags.iloc[0] == 1].tolist()\n",
-    "# get_tags('Farming Simulator 17')\n",
+    "# def get_tags(game_name):\n",
+    "#     game_tags = tags[tags['name'] == game_name]\n",
+    "#     return game_tags.columns[game_tags.iloc[0] == 1].tolist()\n",
+    "# # get_tags('Farming Simulator 17')\n",
     "\n",
-    "def get_comp_req(game_name):\n",
-    "    requirements = all_games[all_games['name'] == game_name]\n",
-    "    return requirements.loc[:, ['name', 'windows', 'mac', 'linux']]\n",
-    "get_comp_req('Farming Simulator 17')"
+    "# def get_comp_req(game_name):\n",
+    "#     requirements = all_games[all_games['name'] == game_name]\n",
+    "#     return requirements.loc[:, ['name', 'windows', 'mac', 'linux']]\n",
+    "# get_comp_req('Farming Simulator 17')"
    ]
   },
   {
@@ -1289,6 +1265,30 @@
     "\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a392c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5351287d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792c72cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
